@@ -1,6 +1,8 @@
 libthread_SRC := 	barrier.c \
 			critical_section.c \
-			semaphore.c \
 			thread.c
+ifeq ($(HAVE_PTHREAD_SIGMASK),1)
+libthread_SRC +=	semaphore.c
+endif
 SRC += $(patsubst %,libthread/%,$(libthread_SRC))
 
