@@ -34,11 +34,13 @@
 #ifndef _LIBTHREAD_SEMAPHORE_H_
 #define _LIBTHREAD_SEMAPHORE_H_
 
+#include "thread.h"
+
 typedef struct _lt_sem_t
 {
 	uint32_t value;
-	thread_t * queue;
-	thread_t * tail;
+	lt_thread_t * queue;
+	lt_thread_t * tail;
 } lt_sem_t;
 
 void lt_sem_init(lt_sem_t * semaphore, uint32_t val);
